Update build environment for Java 25